# UPEC-DataViz

Correction/113 - Data Visualization avec Seaborn/: seaborn_05_grids.ipynb
Correction/114 - Dataviz' avec Bokeh/: bokeh_03_interactif.ipynb
Correction/115-MasterClass DataViz'/: masterclass_dataviz_accidents.ipynb
Day2_correction/: Dashboard.py  app2.py
Day2_correction/Data/: Sample - Superstore.xls
Exercices/: README.md  pyproject.toml
